about, single blog, -podcast / podcast js 작업중

--- a/dev/page_dev/about.html
+++ b/dev/page_dev/about.html
@@ -157,11 +157,11 @@
             <h2 class="heading_2">Our Sponsors</h2>
             <div class="our_s_con">
               <ul>
-                <li><img src="../../assets/images/logo/logoipsum_b_1.png" alt="logoipsum"></li>
-                <li><img src="../../assets/images/logo/logoipsum_b_2.png" alt="logoipsum"></li>
-                <li><img src="../../assets/images/logo/logoipsum_b_3.png" alt="logoipsum"></li>
-                <li><img src="../../assets/images/logo/logoipsum_b_4.png" alt="logoipsum"></li>
-                <li><img src="../../assets/images/logo/logoipsum_b_5.png" alt="logoipsum"></li>
+                <li><img src="../assets/images/logo/logoipsum_b_1.png" alt="logoipsum"></li>
+                <li><img src="../assets/images/logo/logoipsum_b_2.png" alt="logoipsum"></li>
+                <li><img src="../assets/images/logo/logoipsum_b_3.png" alt="logoipsum"></li>
+                <li><img src="../assets/images/logo/logoipsum_b_4.png" alt="logoipsum"></li>
+                <li><img src="../assets/images/logo/logoipsum_b_5.png" alt="logoipsum"></li>
                 <li>
                   <p>Become a</br>Sponsors</p>
                   <a href="#none" class="contact">Contact Now</a>
