--- a/dev/page_dev/single_blog.html
+++ b/dev/page_dev/single_blog.html
@@ -4,13 +4,10 @@
 
 <!-- wrapper -->
 <div id="wrapper">
+  <!-- @@include ../page_include/header.html -->
 
   <!-- container -->
   <div class="container">
-
-      <!-- dark_mode -->
-      <input class="dark_mode" type="checkbox">
-      <!-- // dark_mode -->
 
       <!-- contents -->
       <div id="contents" class="page_single_blog">
@@ -25,7 +22,7 @@
             </p>
           </div>
           <div class="img_wrap">
-            <img src="../../assets/images/contents/main_single_blog.png" alt="single blog's main top banner">
+            <img src="../assets/images/contents/main_single_blog.png" alt="single blog's main top banner">
           </div>
         </div>
         <!-- // single_blog_top -->
@@ -68,7 +65,7 @@
                     <div class="pro_po_profile">
                       <div class="pro_po_profile_wrap">
                         <div class="pro_info">
-                          <img src="../../assets/images/contents/profile_s_2.png" alt="eve madien profile">
+                          <img src="../assets/images/contents/profile_s_2.png" alt="eve madien profile">
                           <span class="name">Eve Madien</span>
                           <span class="job">Producer & Art Director</span>
                           <div class="sns">
@@ -96,12 +93,17 @@
                 </div>
                 <!-- //producer post -->
 
-      </div>
+                <!-- read_our_articles / include layout_list_typ_02 -->
+                <!-- @@include ../page_include/layout_list_typ_02.html -->
+                <!-- //read_our_articles / include layout_list_typ_02 -->
+              </div>
+      <!-- @@include ../page_include/layout_your_inbox.html -->
       <!-- //contents -->
 
   </div>
   <!-- //container -->
 
+  <!-- @@include ../page_include/footer.html -->
 </div>
 <!-- //wrapper -->
 
