--- a/pages/single_podcast.html
+++ b/pages/single_podcast.html
@@ -87,7 +87,7 @@
               <a href="#none" class="mute"><i class="ico_mute"></i></a>
             </div>
             <div class="typ_sec typ_sec_01">
-              <h2>Business</h2>
+              <h2>BUSINESS</h2>
               <p class="heading_2 top_sub_01">Ep 2: Getting the first 100 customers for your business</p>
               <p class="top_sub_txt_02">
                 Apparently we had reached a great height in the atmosphere, for the sky was a dead black,
