--- a/dev/page_dev/podcast.html
+++ b/dev/page_dev/podcast.html
@@ -65,5 +65,37 @@
 </div>
 <!-- //wrapper -->
 
+<script>
+  function categoryOn() {
+  const itemTab = document.querySelector('.category_podcasts')
+  const item = document.querySelectorAll('.page_podcast .data li')
+  const btn = document.querySelectorAll('.page_podcas .cate_pod')
+
+  itemTab.addEventListener('click', (e) => {
+    const filter = e.target.dataset.filter || e.target.parentNode.dataset.filter;
+    if (filter == null) {
+      return;
+    }
+    item.forEach((item) => {
+      if (filter === '*' || filter === item.dataset.type) {
+        item.style.display = "block";
+      } else {
+        item.style.display = "none";
+
+      }
+    });
+  });
+
+}
+
+categoryOn();
+
+//   function classOn() {
+//     const btn = document.querySelectorAll('.page_podcas .cate_pod')
+    
+//   }
+// classOn();
+</script>
+
 <!-- @@close -->
 
