--- a/pages/single_blog.html
+++ b/pages/single_blog.html
@@ -15,13 +15,66 @@
 
 <!-- wrapper -->
 <div id="wrapper">
+<!-- header -->
+<header class="con_pd">
+    <h1>
+      <a href="Home.html"><img src="../assets/images/logo/logo.svg" alt="finsweet"></a>
+    </h1>
+
+    <!-- gnb -->
+    <nav>
+      <div class="gnb">
+        
+        <!-- mo_hamburger -->
+        <div class="mo_hamburger">
+          <div class="line1"></div>
+          <div class="line2"></div>
+          <div class="line3"></div>
+        </div>
+        <!-- //mo_hamburger -->
+
+        <div class="bg_gray"></div>
+
+        <div class="sub_menu">
+          <ul class="menu">
+            <li><a href="Podcasts.html">Podcasts</a></li>
+            <li><a href="Host.html">Host</a></li>
+            <li><a href="About.html">About</a></li>
+            <li><a href="Blog.html">Blog</a></li>
+            <li><a href="Contact.html">Contact</a></li>
+          </ul>
+
+          <ul class="sns">
+            <li><a href="#none" class="facebook_b"></a></li>
+            <li><a href="#none" class="linkedIn_b"></a></li>
+            <li><a href="#none" class="instagram_b"></a></li>
+          </ul>
+        </div>
+        
+      </div>
+    </nav>
+    <!-- //gnb -->
+</header>
+<!-- //header -->
+
+<script>
+
+  const burger = document.querySelector('.mo_hamburger');
+  const sub = document.querySelector('.sub_menu');
+  const bgOn = document.querySelector('.bg_gray');
+
+  burger.addEventListener('click', () => {
+    burger.classList.toggle('toggle');
+    // 수정필요 .contents oh
+    sub.classList.toggle('mo_menu_on')
+    bgOn.classList.toggle('mo_bg_on')
+    document.body.classList.toggle('no_scroll')
+  })
+
+</script>
 
   <!-- container -->
   <div class="container">
-
-      <!-- dark_mode -->
-      <input class="dark_mode" type="checkbox">
-      <!-- // dark_mode -->
 
       <!-- contents -->
       <div id="contents" class="page_single_blog">
@@ -36,7 +89,7 @@
             </p>
           </div>
           <div class="img_wrap">
-            <img src="../../assets/images/contents/main_single_blog.png" alt="single blog's main top banner">
+            <img src="../assets/images/contents/main_single_blog.png" alt="single blog's main top banner">
           </div>
         </div>
         <!-- // single_blog_top -->
@@ -79,7 +132,7 @@
                     <div class="pro_po_profile">
                       <div class="pro_po_profile_wrap">
                         <div class="pro_info">
-                          <img src="../../assets/images/contents/profile_s_2.png" alt="eve madien profile">
+                          <img src="../assets/images/contents/profile_s_2.png" alt="eve madien profile">
                           <span class="name">Eve Madien</span>
                           <span class="job">Producer & Art Director</span>
                           <div class="sns">
@@ -107,12 +160,110 @@
                 </div>
                 <!-- //producer post -->
 
-      </div>
+                <!-- read_our_articles / include layout_list_typ_02 -->
+<!-- list_typ_02 -->
+<div class="list_type list_typ_02 con_pd">
+  <!-- typ_list_wrap -->
+  <div class="typ_list_wrap">
+    <ul>
+      <li>
+        <a href="#none">
+          <img src="../assets/images/contents/bg_con_1.png" alt="articleNews_img" class="typ_list_img">
+        </a>
+      </li>
+      <li>
+        <a href="#none">
+          <img src="../assets/images/contents/articles_1.png" alt="articleNews_img" class="typ_list_img">
+          <div class="typ_sub_wrap">
+            <h3 class="heading_3">Getting the first 100 customers for your business</h3>
+            <p class="heading_5 sub_txt">Lorem ipsum at vero eos et accusam et justo duo dolores et ea rebum.</p>
+            <p class="btn_typ_02 btn_listen">Read Now</p>
+          </div>
+        </a>
+      </li>
+      <li>
+        <a href="#none">
+        <img src="../assets/images/contents/articles_2.png" alt="articleNews_img" class="typ_list_img">
+          <div class="typ_sub_wrap">
+            <h3 class="heading_3">Apparently we had reached a great height in the atmosphere, ...</h3>
+            <p class="heading_5 sub_txt">Lorem ipsum at vero eos et accusam et justo duo dolores et ea rebum.</p>
+            <p class="btn_typ_02 btn_listen">Read Now</p>
+          </div>
+        </a>
+      </li>
+    </ul>
+  </div>
+  <!-- //typ_list_wrap -->
+</div>
+<!-- //list_typ_02 -->
+
+
+                <!-- //read_our_articles / include layout_list_typ_02 -->
+              </div>
+<!-- layout_your_inbox -->
+<div class="footer_top con_pd">
+  <div class="inbox_wrap">
+    <div class="inbox">
+      <p class="heading_2">Receive new episodes in your inbox.</p>
+      <p class="email_send">
+        <input type="email" placeholder="Enter Your Email Id">
+        <input type="submit" value="Subscribe">
+      </p>
+    </div>
+  </div>
+</div>
+<!-- //layout_your_inbox -->
       <!-- //contents -->
 
   </div>
   <!-- //container -->
 
+<!-- footer -->
+<footer>
+  <!-- footer_con -->
+  <div class="footer_con">
+    <div class="logo_wrap">
+      <a href="Home.html"><img src="../assets/images/logo/logo_w.svg" alt="finsweet"></a>
+    </div>
+
+    <div class="pages">
+      <h4>Pages</h4>
+      <ul>
+        <li><a href="home.html">Home</a></li>
+        <li><a href="podcasts.html">Podcasts</a></li>
+        <li><a href="host.html">Host</a></li>
+        <li><a href="blog.html">Blog</a></li>
+      </ul>
+    </div>
+
+    <div class="reach_us">
+      <h4>Reach Us</h4>
+      <ul>
+        <li><a href="#none">Contact</a></li>
+        <li><a href="#none">About</a></li>
+      </ul>
+    </div>
+
+    <div class="subscribe">
+      <h4>Subscribe</h4>
+      <ul>
+        <li class="logo_apple"><a href="#none"><img src="../assets/images/logo/apple_podcasts_w.png" alt="apple podcasts"></a></li>
+        <li class="logo_sound_cloud"><a href="#none"><img src="../assets/images/logo/sound_cloud_w.png" alt="sound cloud"></a></li>
+        <li class="google_logo"><a href="#none"><img src="../assets/images/logo/google_podcast_w.png" alt="googl _podcast"></a></li>
+        <li class="spotify_logo"><a href="#none"><img src="../assets/images/logo/spotify_w.png" alt="spotify"></a></li>
+      </ul>
+    </div>
+    <!-- dark_mode -->
+    <input class="dark_mode" type="checkbox">
+    <!-- // dark_mode -->
+  </div>
+
+  <div class="copyright">
+    <em>© Copyright Finsweet 2021</em>
+  </div>
+
+</footer>
+<!-- //footer -->
 </div>
 <!-- //wrapper -->
 
