home페이지 마크업/ 공통수정사항

--- a/dev/page_include/layout_list_typ_02.html
+++ b/dev/page_include/layout_list_typ_02.html
@@ -1,5 +1,5 @@
 <!-- list_typ_02 -->
-<div class="list_type list_typ_02 con_pd">
+<div class="list_type list_typ_02 con_pd con-m">
   <!-- typ_list_wrap -->
   <div class="typ_list_wrap">
     <ul>
