--- a/dev/page_dev/home.html
+++ b/dev/page_dev/home.html
@@ -6,7 +6,7 @@
 <div id="wrapper">
   <!-- container -->
   <div class="container">
-      <!-- contents -->
+    <!-- @@include ../page_include/header.html -->
       <div id="contents" class="page_home">
         <div class="home_wrap">
           <div class="main_top">
@@ -68,60 +68,56 @@
           </div>
           <!-- @@include ../page_include/layout_list_typ_01.html -->
 
-          <div class="typ_tit_wrap swiper-sec con_pd con-m">
-            <h2 class="heading_2">What our listeners say</h2>
-            <div class="type_01_sub">
-              <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                Mus cras lacus tellus morbi viverra suspendisse ornare. Sit volutpat,
-                volutpat ut netus malesuada enim penatibus non aliquet.
-              </p>
-              <div class="swiper_btn_wrap">
-                <div class="swiper-button-next"></div>
-                <div class="swiper-button-prev"></div>
+          <div class="swiper custom_swiper">
+            <div class="typ_tit_wrap swiper-sec">
+              <h2 class="heading_2">What our listeners say</h2>
+              <div class="type_01_sub">
+                <p>
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                  Mus cras lacus tellus morbi viverra suspendisse ornare. Sit volutpat,
+                  volutpat ut netus malesuada enim penatibus non aliquet.
+                </p>
+                <div class="swiper_btn_wrap">
+                  <div class="swiper-button-next"></div>
+                  <div class="swiper-button-prev"></div>
+                </div>
               </div>
             </div>
-          </div>
-          <div class="list_type custom_swiper con_pd">
-            <!-- typ_list_wrap -->
-            <div class="swiper typ_list_wrap">
-              <ul class="swiper-wrapper custom_wrap">
-                <li class="swiper-slide">
-                  <div class="my_review">
-                    <img src="../assets/images/contents/listeners_1.png" alt="Eve Madien" class="profile_img">
-                    <p class="heading_5">Eve Madien</p>
-                  </div>
-                  <div class="heading_5 review_con">
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                    Lorem eget condimentum enim libero ultricies amet odio fringilla. Ut nibh morbi augue porta aliquet commodo.
-                    Fermentum auctor lacus eget in ut integer viverra sed. Penatibus tortor consequat.
-                  </div>
-                </li>
-                <li class="swiper-slide">
-                  <div class="my_review">
-                    <img src="../assets/images/contents/listeners_2.png" alt="Ash Benfred" class="profile_img">
-                    <p class="heading_5">Ash Benfred</p>
-                  </div>
-                  <div class="heading_5 review_con">
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                    Lorem eget condimentum enim libero ultricies amet odio fringilla.
-                  </div>
-                </li>
-                <li class="swiper-slide">
-                  <div class="my_review">
-                    <img src="../assets/images/contents/listeners_3.png" alt="Ryan Smith" class="profile_img">
-                    <p class="heading_5">Ryan Smith</p>
-                  </div>
-                  <div class="heading_5 review_con">
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                    Lorem eget condimentum enim libero ultricies amet odio fringilla.
-                    Ut nibh morbi augue porta aliquet commodo. Fermentum auctor lacus eget in ut integer viverra sed.
-                    Penatibus tortor consequat.
-                  </div>
-                </li>
-              </ul>
-            </div>
-            <!-- //typ_list_wrap -->
+            <ul class="swiper-wrapper custom_wrap">
+              <li class="swiper-slide">
+                <div class="my_review">
+                  <img src="../assets/images/contents/listeners_1.png" alt="Eve Madien" class="profile_img">
+                  <p class="heading_5">Eve Madien</p>
+                </div>
+                <div class="heading_5 review_con">
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                  Lorem eget condimentum enim libero ultricies amet odio fringilla. Ut nibh morbi augue porta aliquet commodo.
+                  Fermentum auctor lacus eget in ut integer viverra sed. Penatibus tortor consequat.
+                </div>
+              </li>
+              <li class="swiper-slide">
+                <div class="my_review">
+                  <img src="../assets/images/contents/listeners_2.png" alt="Ash Benfred" class="profile_img">
+                  <p class="heading_5">Ash Benfred</p>
+                </div>
+                <div class="heading_5 review_con">
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                  Lorem eget condimentum enim libero ultricies amet odio fringilla.
+                </div>
+              </li>
+              <li class="swiper-slide">
+                <div class="my_review">
+                  <img src="../assets/images/contents/listeners_3.png" alt="Ryan Smith" class="profile_img">
+                  <p class="heading_5">Ryan Smith</p>
+                </div>
+                <div class="heading_5 review_con">
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                  Lorem eget condimentum enim libero ultricies amet odio fringilla.
+                  Ut nibh morbi augue porta aliquet commodo. Fermentum auctor lacus eget in ut integer viverra sed.
+                  Penatibus tortor consequat.
+                </div>
+              </li>
+            </ul>
           </div>
 
           <!-- @@include ../page_include/layout_your_inbox.html -->
@@ -132,9 +128,9 @@
       </div>
       <!-- //contents -->
 
+      <!-- @@include ../page_include/footer.html -->
   </div>
     <!-- //container -->
-
 </div>
 <!-- //wrapper -->
 
