--- a/pages/home.html
+++ b/pages/home.html
@@ -17,7 +17,63 @@
 <div id="wrapper">
   <!-- container -->
   <div class="container">
-      <!-- contents -->
+<!-- header -->
+<header class="con_pd">
+    <h1>
+      <a href="Home.html"><img src="../assets/images/logo/logo.svg" alt="finsweet"></a>
+    </h1>
+
+    <!-- gnb -->
+    <nav>
+      <div class="gnb">
+        
+        <!-- mo_hamburger -->
+        <div class="mo_hamburger">
+          <div class="line1"></div>
+          <div class="line2"></div>
+          <div class="line3"></div>
+        </div>
+        <!-- //mo_hamburger -->
+
+        <div class="bg_gray"></div>
+
+        <div class="sub_menu">
+          <ul class="menu">
+            <li><a href="Podcasts.html">Podcasts</a></li>
+            <li><a href="Host.html">Host</a></li>
+            <li><a href="About.html">About</a></li>
+            <li><a href="Blog.html">Blog</a></li>
+            <li><a href="Contact.html">Contact</a></li>
+          </ul>
+
+          <ul class="sns">
+            <li><a href="#none" class="facebook_b"></a></li>
+            <li><a href="#none" class="linkedIn_b"></a></li>
+            <li><a href="#none" class="instagram_b"></a></li>
+          </ul>
+        </div>
+        
+      </div>
+    </nav>
+    <!-- //gnb -->
+</header>
+<!-- //header -->
+
+<script>
+
+  const burger = document.querySelector('.mo_hamburger');
+  const sub = document.querySelector('.sub_menu');
+  const bgOn = document.querySelector('.bg_gray');
+
+  burger.addEventListener('click', () => {
+    burger.classList.toggle('toggle');
+    // 수정필요 .contents oh
+    sub.classList.toggle('mo_menu_on')
+    bgOn.classList.toggle('mo_bg_on')
+    document.body.classList.toggle('no_scroll')
+  })
+
+</script>
       <div id="contents" class="page_home">
         <div class="home_wrap">
           <div class="main_top">
@@ -115,60 +171,56 @@
 </div>
 <!-- //list_typ_01 -->
 
-          <div class="typ_tit_wrap swiper-sec con_pd con-m">
-            <h2 class="heading_2">What our listeners say</h2>
-            <div class="type_01_sub">
-              <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                Mus cras lacus tellus morbi viverra suspendisse ornare. Sit volutpat,
-                volutpat ut netus malesuada enim penatibus non aliquet.
-              </p>
-              <div class="swiper_btn_wrap">
-                <div class="swiper-button-next"></div>
-                <div class="swiper-button-prev"></div>
+          <div class="swiper custom_swiper">
+            <div class="typ_tit_wrap swiper-sec">
+              <h2 class="heading_2">What our listeners say</h2>
+              <div class="type_01_sub">
+                <p>
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                  Mus cras lacus tellus morbi viverra suspendisse ornare. Sit volutpat,
+                  volutpat ut netus malesuada enim penatibus non aliquet.
+                </p>
+                <div class="swiper_btn_wrap">
+                  <div class="swiper-button-next"></div>
+                  <div class="swiper-button-prev"></div>
+                </div>
               </div>
             </div>
-          </div>
-          <div class="list_type custom_swiper con_pd">
-            <!-- typ_list_wrap -->
-            <div class="swiper typ_list_wrap">
-              <ul class="swiper-wrapper custom_wrap">
-                <li class="swiper-slide">
-                  <div class="my_review">
-                    <img src="../assets/images/contents/listeners_1.png" alt="Eve Madien" class="profile_img">
-                    <p class="heading_5">Eve Madien</p>
-                  </div>
-                  <div class="heading_5 review_con">
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                    Lorem eget condimentum enim libero ultricies amet odio fringilla. Ut nibh morbi augue porta aliquet commodo.
-                    Fermentum auctor lacus eget in ut integer viverra sed. Penatibus tortor consequat.
-                  </div>
-                </li>
-                <li class="swiper-slide">
-                  <div class="my_review">
-                    <img src="../assets/images/contents/listeners_2.png" alt="Ash Benfred" class="profile_img">
-                    <p class="heading_5">Ash Benfred</p>
-                  </div>
-                  <div class="heading_5 review_con">
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                    Lorem eget condimentum enim libero ultricies amet odio fringilla.
-                  </div>
-                </li>
-                <li class="swiper-slide">
-                  <div class="my_review">
-                    <img src="../assets/images/contents/listeners_3.png" alt="Ryan Smith" class="profile_img">
-                    <p class="heading_5">Ryan Smith</p>
-                  </div>
-                  <div class="heading_5 review_con">
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                    Lorem eget condimentum enim libero ultricies amet odio fringilla.
-                    Ut nibh morbi augue porta aliquet commodo. Fermentum auctor lacus eget in ut integer viverra sed.
-                    Penatibus tortor consequat.
-                  </div>
-                </li>
-              </ul>
-            </div>
-            <!-- //typ_list_wrap -->
+            <ul class="swiper-wrapper custom_wrap">
+              <li class="swiper-slide">
+                <div class="my_review">
+                  <img src="../assets/images/contents/listeners_1.png" alt="Eve Madien" class="profile_img">
+                  <p class="heading_5">Eve Madien</p>
+                </div>
+                <div class="heading_5 review_con">
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                  Lorem eget condimentum enim libero ultricies amet odio fringilla. Ut nibh morbi augue porta aliquet commodo.
+                  Fermentum auctor lacus eget in ut integer viverra sed. Penatibus tortor consequat.
+                </div>
+              </li>
+              <li class="swiper-slide">
+                <div class="my_review">
+                  <img src="../assets/images/contents/listeners_2.png" alt="Ash Benfred" class="profile_img">
+                  <p class="heading_5">Ash Benfred</p>
+                </div>
+                <div class="heading_5 review_con">
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                  Lorem eget condimentum enim libero ultricies amet odio fringilla.
+                </div>
+              </li>
+              <li class="swiper-slide">
+                <div class="my_review">
+                  <img src="../assets/images/contents/listeners_3.png" alt="Ryan Smith" class="profile_img">
+                  <p class="heading_5">Ryan Smith</p>
+                </div>
+                <div class="heading_5 review_con">
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                  Lorem eget condimentum enim libero ultricies amet odio fringilla.
+                  Ut nibh morbi augue porta aliquet commodo. Fermentum auctor lacus eget in ut integer viverra sed.
+                  Penatibus tortor consequat.
+                </div>
+              </li>
+            </ul>
           </div>
 
 <!-- layout_your_inbox -->
@@ -186,7 +238,7 @@
 <!-- //layout_your_inbox -->
 
 <!-- list_typ_02 -->
-<div class="list_type list_typ_02 con_pd">
+<div class="list_type list_typ_02 con_pd con-m">
   <!-- typ_list_wrap -->
   <div class="typ_list_wrap">
     <ul>
@@ -227,9 +279,54 @@
       </div>
       <!-- //contents -->
 
+<!-- footer -->
+<footer>
+  <!-- footer_con -->
+  <div class="footer_con">
+    <div class="logo_wrap">
+      <a href="Home.html"><img src="../assets/images/logo/logo_w.svg" alt="finsweet"></a>
+    </div>
+
+    <div class="pages">
+      <h4>Pages</h4>
+      <ul>
+        <li><a href="home.html">Home</a></li>
+        <li><a href="podcasts.html">Podcasts</a></li>
+        <li><a href="host.html">Host</a></li>
+        <li><a href="blog.html">Blog</a></li>
+      </ul>
+    </div>
+
+    <div class="reach_us">
+      <h4>Reach Us</h4>
+      <ul>
+        <li><a href="#none">Contact</a></li>
+        <li><a href="#none">About</a></li>
+      </ul>
+    </div>
+
+    <div class="subscribe">
+      <h4>Subscribe</h4>
+      <ul>
+        <li class="logo_apple"><a href="#none"><img src="../assets/images/logo/apple_podcasts_w.png" alt="apple podcasts"></a></li>
+        <li class="logo_sound_cloud"><a href="#none"><img src="../assets/images/logo/sound_cloud_w.png" alt="sound cloud"></a></li>
+        <li class="google_logo"><a href="#none"><img src="../assets/images/logo/google_podcast_w.png" alt="googl _podcast"></a></li>
+        <li class="spotify_logo"><a href="#none"><img src="../assets/images/logo/spotify_w.png" alt="spotify"></a></li>
+      </ul>
+    </div>
+    <!-- dark_mode -->
+    <input class="dark_mode" type="checkbox">
+    <!-- // dark_mode -->
+  </div>
+
+  <div class="copyright">
+    <em>© Copyright Finsweet 2021</em>
+  </div>
+
+</footer>
+<!-- //footer -->
   </div>
     <!-- //container -->
-
 </div>
 <!-- //wrapper -->
 
