--- a/pages/promotion.html
+++ b/pages/promotion.html
@@ -330,7 +330,7 @@
           <p class="heading_4">type : title 없는 list</p>
         </div>
 <!-- list_typ_02 -->
-<div class="list_type list_typ_02 con_pd">
+<div class="list_type list_typ_02 con_pd con-m">
   <!-- typ_list_wrap -->
   <div class="typ_list_wrap">
     <ul>
@@ -586,9 +586,59 @@
             </ul>
           </div>
           <!-- //typ_list_wrap -->
-          <!-- <div class="swiper-button-next"></div>
-          <div class="swiper-button-prev"></div> -->
         </div>
+
+          <div class="swiper custom_swiper con-m">
+            <div class="typ_tit_wrap swiper-sec con_pd">
+              <h2 class="heading_2">What our listeners say</h2>
+              <div class="type_01_sub">
+                <p>
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                  Mus cras lacus tellus morbi viverra suspendisse ornare. Sit volutpat,
+                  volutpat ut netus malesuada enim penatibus non aliquet.
+                </p>
+                <div class="swiper_btn_wrap">
+                  <div class="swiper-button-next"></div>
+                  <div class="swiper-button-prev"></div>
+                </div>
+              </div>
+            </div>
+            <ul class="swiper-wrapper custom_wrap">
+              <li class="swiper-slide">
+                <div class="my_review">
+                  <img src="../assets/images/contents/listeners_1.png" alt="Eve Madien" class="profile_img">
+                  <p class="heading_5">Eve Madien</p>
+                </div>
+                <div class="heading_5 review_con">
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                  Lorem eget condimentum enim libero ultricies amet odio fringilla. Ut nibh morbi augue porta aliquet commodo.
+                  Fermentum auctor lacus eget in ut integer viverra sed. Penatibus tortor consequat.
+                </div>
+              </li>
+              <li class="swiper-slide">
+                <div class="my_review">
+                  <img src="../assets/images/contents/listeners_2.png" alt="Ash Benfred" class="profile_img">
+                  <p class="heading_5">Ash Benfred</p>
+                </div>
+                <div class="heading_5 review_con">
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                  Lorem eget condimentum enim libero ultricies amet odio fringilla.
+                </div>
+              </li>
+              <li class="swiper-slide">
+                <div class="my_review">
+                  <img src="../assets/images/contents/listeners_3.png" alt="Ryan Smith" class="profile_img">
+                  <p class="heading_5">Ryan Smith</p>
+                </div>
+                <div class="heading_5 review_con">
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                  Lorem eget condimentum enim libero ultricies amet odio fringilla.
+                  Ut nibh morbi augue porta aliquet commodo. Fermentum auctor lacus eget in ut integer viverra sed.
+                  Penatibus tortor consequat.
+                </div>
+              </li>
+            </ul>
+          </div>
 
 <!-- footer_sponsors -->
 <div class="footer_top con_pd">
