--- a/dev/page_dev/podcast.html
+++ b/dev/page_dev/podcast.html
@@ -102,7 +102,7 @@ function classOn() {
       if ( current.length > 0 ) {
         current[0].className = current[0].className.replace(" on", "");
       }
-      btns.className += " on";
+      this.className += " on";
       })
   }
 
