--- a/pages/podcast.html
+++ b/pages/podcast.html
@@ -241,7 +241,7 @@ function classOn() {
       if ( current.length > 0 ) {
         current[0].className = current[0].className.replace(" on", "");
       }
-      btns.className += " on";
+      this.className += " on";
       })
   }
 
