header, footer 삭제

--- a/dev/page_dev/about.html
+++ b/dev/page_dev/about.html
@@ -4,14 +4,9 @@
 
 <!-- wrapper -->
 <div id="wrapper">
-  <!-- @@include ../page_include/header.html -->
 
   <!-- container -->
   <div class="container">
-
-    <!-- dark_mode -->
-    <!-- <input class="dark_mode" type="checkbox"> -->
-    <!-- // dark_mode -->
     
       <!-- contents -->
       <div id="contents" class="page_about">
@@ -33,6 +28,47 @@
           </div>
         </div>
         <!-- banner_top -->
+
+        <!-- info -->
+        <div class="list_type custom_swiper con-m con_pd">
+          <!-- typ_list_wrap -->
+          <div class="typ_list_wrap">
+            <ul class="custom_wrap">
+              <li>
+                <div class="my_review">
+                  <img src="../assets/images/ico/ico_podcasts_p.png" alt="Eve Madien" class="ico_podcasts_img">
+                  <p class="heading_4">500+ Podcast</p>
+                </div>
+                <div class="heading_5 icon_desc">
+                  Apparently we had reached a great height in the atmosphere,
+                  for the sky was a dead black, and the stars had ceased to twinkle.
+                </div>
+              </li>
+              <li>
+                <div class="my_review">
+                  <img src="../assets/images/ico/ico_subscribers_p.png" alt="Ash Benfred" class="ico_subscribers_img">
+                  <p class="heading_4">24M Views</p>
+                </div>
+                <div class="heading_5 icon_desc">
+                  Apparently we had reached a great height in the atmosphere,
+                  for the sky was a dead black, and the stars had ceased to twinkle.
+                </div>
+              </li>
+              <li>
+                <div class="my_review">
+                  <img src="../assets/images/ico/ico_view_p.png" alt="Ryan Smith" class="ico_view_img">
+                  <p class="heading_4">600k Subs</p>
+                </div>
+                <div class="heading_5 icon_desc">
+                  Apparently we had reached a great height in the atmosphere,
+                  for the sky was a dead black, and the stars had ceased to twinkle.
+                </div>
+              </li>
+            </ul>
+          </div>
+          <!-- //typ_list_wrap -->
+        </div>
+        <!-- //info -->
 
         <!-- our_team -->
         <div class="our_team">
@@ -184,13 +220,11 @@
         <!-- //recent_episodes -->
 
       </div>
-      <!-- @@include ../page_include/footer_sponsors.html -->
       <!-- //contents -->
 
   </div>
   <!-- //container -->
 
-  <!-- @@include ../page_include/footer.html -->
 </div>
 <!-- //wrapper -->
 
