--- a/dev/page_dev/podcast.html
+++ b/dev/page_dev/podcast.html
@@ -4,7 +4,6 @@
 
 <!-- wrapper -->
 <div id="wrapper">
-  <!-- @@include ../page_include/header.html -->
   
   <!-- container -->
   <div class="container">
@@ -54,6 +53,24 @@
             <!-- @@include ../page_include/layout_list_typ_01.html -->
           </div>
           <!-- //all_podcasts -->
+
+          <!-- your_own_story -->
+          <div class="your_own_story">
+            <div class="con-m">
+              <div class="layout_banner_wrap">
+                <div>
+                  <p class="heading_1">Become The Hero Of Your Own Story</p>
+                  <p class="heading_5 sub_txt">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                    Mus cras lacus tellus morbi viverra suspendisse ornare. Sit volutpat,
+                    volutpat ut netus malesuada enim penatibus non aliquet.
+                  </p>
+                  <a href="#none" class="btn_typ_01 btn_3">Secondary</a>
+                </div>
+              </div>
+            </div>
+          </div>
+          <!-- //your_own_story -->
 
         </div>
       </div>
