--- a/pages/promotion.html
+++ b/pages/promotion.html
@@ -385,7 +385,7 @@
           </div>
         </div>
 
-        <div class="con-m page_padcast"> <!-- page_padcast는 padcast페이지 최상단 div에 넣어주고 여기에 있는건 빼면됨  -->
+        <div class="con-m page_podcast"> <!-- page_podcast는 podcast페이지 최상단 div에 넣어주고 여기에 있는건 빼면됨  -->
           <div class="layout_banner_wrap">
             <div>
               <p class="heading_1">Become The Hero Of Your Own Story</p>
@@ -518,7 +518,7 @@
             <div class="pro_po_profile">
               <div class="pro_po_profile_wrap">
                 <div class="pro_info">
-                  <img src="../../assets/images/contents/profile_s_2.png" alt="eve madien profile">
+                  <img src="../assets/images/contents/profile_s_2.png" alt="eve madien profile">
                   <span class="name">Eve Madien</span>
                   <span class="job">Producer & Art Director</span>
                   <div class="sns">
