--- a/dev/page_dev/promotion.html
+++ b/dev/page_dev/promotion.html
@@ -210,7 +210,7 @@
           </div>
         </div>
 
-        <div class="con-m page_padcast"> <!-- page_padcast는 padcast페이지 최상단 div에 넣어주고 여기에 있는건 빼면됨  -->
+        <div class="con-m page_podcast"> <!-- page_podcast는 podcast페이지 최상단 div에 넣어주고 여기에 있는건 빼면됨  -->
           <div class="layout_banner_wrap">
             <div>
               <p class="heading_1">Become The Hero Of Your Own Story</p>
