--- a/pages/podcast.html
+++ b/pages/podcast.html
@@ -15,63 +15,6 @@
 
 <!-- wrapper -->
 <div id="wrapper">
-<!-- header -->
-<header class="con_pd">
-    <h1>
-      <a href="Home.html"><img src="../assets/images/logo/logo.svg" alt="finsweet"></a>
-    </h1>
-
-    <!-- gnb -->
-    <nav>
-      <div class="gnb">
-        
-        <!-- mo_hamburger -->
-        <div class="mo_hamburger">
-          <div class="line1"></div>
-          <div class="line2"></div>
-          <div class="line3"></div>
-        </div>
-        <!-- //mo_hamburger -->
-
-        <div class="bg_gray"></div>
-
-        <div class="sub_menu">
-          <ul class="menu">
-            <li><a href="Podcasts.html">Podcasts</a></li>
-            <li><a href="Host.html">Host</a></li>
-            <li><a href="About.html">About</a></li>
-            <li><a href="Blog.html">Blog</a></li>
-            <li><a href="Contact.html">Contact</a></li>
-          </ul>
-
-          <ul class="sns">
-            <li><a href="#none" class="facebook_b"></a></li>
-            <li><a href="#none" class="linkedIn_b"></a></li>
-            <li><a href="#none" class="instagram_b"></a></li>
-          </ul>
-        </div>
-        
-      </div>
-    </nav>
-    <!-- //gnb -->
-</header>
-<!-- //header -->
-
-<script>
-
-  const burger = document.querySelector('.mo_hamburger');
-  const sub = document.querySelector('.sub_menu');
-  const bgOn = document.querySelector('.bg_gray');
-
-  burger.addEventListener('click', () => {
-    burger.classList.toggle('toggle');
-    // 수정필요 .contents oh
-    sub.classList.toggle('mo_menu_on')
-    bgOn.classList.toggle('mo_bg_on')
-    document.body.classList.toggle('no_scroll')
-  })
-
-</script>
   
   <!-- container -->
   <div class="container">
@@ -193,6 +136,24 @@
 <!-- //list_typ_01 -->
           </div>
           <!-- //all_podcasts -->
+
+          <!-- your_own_story -->
+          <div class="your_own_story">
+            <div class="con-m">
+              <div class="layout_banner_wrap">
+                <div>
+                  <p class="heading_1">Become The Hero Of Your Own Story</p>
+                  <p class="heading_5 sub_txt">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                    Mus cras lacus tellus morbi viverra suspendisse ornare. Sit volutpat,
+                    volutpat ut netus malesuada enim penatibus non aliquet.
+                  </p>
+                  <a href="#none" class="btn_typ_01 btn_3">Secondary</a>
+                </div>
+              </div>
+            </div>
+          </div>
+          <!-- //your_own_story -->
 
         </div>
       </div>
