깨지는 컴포넌츠css수정

--- a/dev/page_dev/promotion.html
+++ b/dev/page_dev/promotion.html
@@ -343,7 +343,7 @@
             <div class="pro_po_profile">
               <div class="pro_po_profile_wrap">
                 <div class="pro_info">
-                  <img src="../../assets/images/contents/profile_s_2.png" alt="eve madien profile">
+                  <img src="../assets/images/contents/profile_s_2.png" alt="eve madien profile">
                   <span class="name">Eve Madien</span>
                   <span class="job">Producer & Art Director</span>
                   <div class="sns">
@@ -412,58 +412,6 @@
           </div>
           <!-- //typ_list_wrap -->
         </div>
-
-          <div class="swiper custom_swiper con-m">
-            <div class="typ_tit_wrap swiper-sec con_pd">
-              <h2 class="heading_2">What our listeners say</h2>
-              <div class="type_01_sub">
-                <p>
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                  Mus cras lacus tellus morbi viverra suspendisse ornare. Sit volutpat,
-                  volutpat ut netus malesuada enim penatibus non aliquet.
-                </p>
-                <div class="swiper_btn_wrap">
-                  <div class="swiper-button-next"></div>
-                  <div class="swiper-button-prev"></div>
-                </div>
-              </div>
-            </div>
-            <ul class="swiper-wrapper custom_wrap">
-              <li class="swiper-slide">
-                <div class="my_review">
-                  <img src="../assets/images/contents/listeners_1.png" alt="Eve Madien" class="profile_img">
-                  <p class="heading_5">Eve Madien</p>
-                </div>
-                <div class="heading_5 review_con">
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                  Lorem eget condimentum enim libero ultricies amet odio fringilla. Ut nibh morbi augue porta aliquet commodo.
-                  Fermentum auctor lacus eget in ut integer viverra sed. Penatibus tortor consequat.
-                </div>
-              </li>
-              <li class="swiper-slide">
-                <div class="my_review">
-                  <img src="../assets/images/contents/listeners_2.png" alt="Ash Benfred" class="profile_img">
-                  <p class="heading_5">Ash Benfred</p>
-                </div>
-                <div class="heading_5 review_con">
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                  Lorem eget condimentum enim libero ultricies amet odio fringilla.
-                </div>
-              </li>
-              <li class="swiper-slide">
-                <div class="my_review">
-                  <img src="../assets/images/contents/listeners_3.png" alt="Ryan Smith" class="profile_img">
-                  <p class="heading_5">Ryan Smith</p>
-                </div>
-                <div class="heading_5 review_con">
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                  Lorem eget condimentum enim libero ultricies amet odio fringilla.
-                  Ut nibh morbi augue porta aliquet commodo. Fermentum auctor lacus eget in ut integer viverra sed.
-                  Penatibus tortor consequat.
-                </div>
-              </li>
-            </ul>
-          </div>
 
         <!-- @@include ../page_include/footer_sponsors.html -->
         <!-- //contents -->
