수정사항 반영

--- a/dev/page_dev/host.html
+++ b/dev/page_dev/host.html
@@ -14,7 +14,7 @@
 
           <!-- banner_top_01 -->
           <div class="banner_top_01">
-            <div class="banner_top_img"></div>
+            <div class="banner_top_img"><span class="blind">welcome to my podcast background</span></div>
             <div class="banner_top_tit_wrap">
               <div class="typ_sec typ_sec_02">
                 <h2>ABOUT THE HOST</h2>
@@ -66,7 +66,7 @@
 
               <!-- origins_txt -->
               <div class="origins_txt">
-                <p class="heading_2">My origins on YouTube</br>in 2008</p>
+                <p class="heading_2">My origins on YouTube<span class="dbr"></span> in 2008</p>
                 <p class="con_txt">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                   Lorem eget condimentum enim libero ultricies amet odio fringilla. Ut
                   nibh morbi augue porta aliquet commodo. Fermentum auctor
@@ -109,10 +109,10 @@
             <h2 class="blind">podcasts and views</h2>
             <div class="pod_vi">
               <ul>
-                <li class="heading_2"><i></i><span class="heading_1">500+</span>Podcasts</li>
-                <li class="heading_2"><i></i><span class="heading_1">24M</span>Views</li>
-                <li class="heading_2"><i></i><span class="heading_1">600K</span>Subscribers</li>
-                <li class="heading_2"><i></i><span class="heading_1">24M</span>Views</li>
+                <li class="heading_2"><span>500+</span>Podcasts</li>
+                <li class="heading_2"><span>24M</span>Views</li>
+                <li class="heading_2"><span>600K</span>Subscribers</li>
+                <li class="heading_2"><span>24M</span>Views</li>
               </ul>
             </div>
           </div>
@@ -138,7 +138,7 @@
           <div class="typ_tit_wrap con_pd con-m">
             <h2 class="heading_2">Recent Episodes</h2>
             <div class="type_01_sub">
-              <p>Apparently we had reached a great height in the</br>atmosphere, for the sky was a dead black.</p>
+              <p>Apparently we had reached a great height in the atmosphere, for the sky was a dead black.</p>
               <a href="#none" class="btn_typ_01 btn_1 btn_recent">See All Episodes</a>
             </div>
           </div>
