--- a/pages/about.html
+++ b/pages/about.html
@@ -224,7 +224,7 @@
         <div class="typ_tit_wrap con_pd con-m">
           <h2 class="heading_2">Recent Episodes</h2>
           <div class="type_01_sub">
-            <p>Apparently we had reached a great height in the</br>atmosphere, for the sky was a dead black.</p>
+            <p>Apparently we had reached a great height in the atmosphere, for the sky was a dead black.</p>
           </div>
         </div>
 <!-- list_typ_01 -->
