--- a/pages/single_podcast.html
+++ b/pages/single_podcast.html
@@ -95,9 +95,9 @@
                   <span class="job">Producer & Art Director</span>
                   <div class="sns">
                     <ul>
-                      <li><a href="#none" class="facebook_s"></a></li>
-                      <li><a href="#none" class="linkedIn_s"></a></li>
-                      <li><a href="#none" class="instagram_s"></a></li>
+                      <li><a href="#none" class="facebook_s"><span class="blind">go to facebook</span></a></li>
+                      <li><a href="#none" class="linkedIn_s"><span class="blind">go to linkdIn</span></a></li>
+                      <li><a href="#none" class="instagram_s"><span class="blind">go to instagram</span></a></li>
                     </ul>
                   </div>
                 </div>
@@ -146,7 +146,7 @@
         <div class="typ_tit_wrap con_pd con-m">
           <h2 class="heading_2">Recent Episodes</h2>
           <div class="type_01_sub">
-            <p>Apparently we had reached a great height in the</br>atmosphere, for the sky was a dead black.</p>
+            <p>Apparently we had reached a great height in the atmosphere, for the sky was a dead black.</p>
           </div>
         </div>
 <!-- list_typ_01 -->
