--- a/dev/page_dev/about.html
+++ b/dev/page_dev/about.html
@@ -213,7 +213,7 @@
         <div class="typ_tit_wrap con_pd con-m">
           <h2 class="heading_2">Recent Episodes</h2>
           <div class="type_01_sub">
-            <p>Apparently we had reached a great height in the</br>atmosphere, for the sky was a dead black.</p>
+            <p>Apparently we had reached a great height in the atmosphere, for the sky was a dead black.</p>
           </div>
         </div>
         <!-- @@include ../page_include/layout_list_typ_01.html -->
