--- a/pages/single_blog.html
+++ b/pages/single_blog.html
@@ -80,9 +80,9 @@
                           <span class="job">Producer & Art Director</span>
                           <div class="sns">
                             <ul>
-                              <li><a href="#none" class="facebook_s"></a></li>
-                              <li><a href="#none" class="linkedIn_s"></a></li>
-                              <li><a href="#none" class="instagram_s"></a></li>
+                              <li><a href="#none" class="facebook_s"><span class="blind">go to facebook</span></a></li>
+                              <li><a href="#none" class="linkedIn_s"><span class="blind">go to linkdIn</span></a></li>
+                              <li><a href="#none" class="instagram_s"><span class="blind">go to instagram</span></a></li>
                             </ul>
                           </div>
                         </div>
