header 경로수정, index페이지 css추가, 다크모드 디자인, 배너슬라이스부분 수정

--- a/dev/page_dev/home.html
+++ b/dev/page_dev/home.html
@@ -4,9 +4,9 @@
 
 <!-- wrapper -->
 <div id="wrapper">
-  <!-- container -->
   <div class="container">
     <!-- @@include ../page_include/header.html -->
+
       <div id="contents" class="page_home">
         <div class="home_wrap">
           <div class="main_top">
@@ -22,15 +22,30 @@
               </p>
             </div>
           </div>
-          <div class="mq_logo_list">
-            <marquee scrollamount=10>
-              <a href="#none"><img src="../assets/images/logo/podcast_available_on.png" alt="podcast_available_on logo"></a>
-              <a href="#none"><img src="../assets/images/logo/apple_podcasts.png" alt="apple podcasts logo"></a>
-              <a href="#none"><img src="../assets/images/logo/sound_cloud.png" alt="sound_cloud logo"></a>
-              <a href="#none"><img src="../assets/images/logo/google_podcast.png" alt="google_podcast logo"></a>
-              <a href="#none"><img src="../assets/images/logo/spotify.png" alt="spotify logo"></a>
-            </marquee>
-          </div>
+          <section class="notify-wrap">
+            <div class="notify-wrap-inner ellipsis">
+              <div class="notify-scroll">
+                <ul>
+                  <li>
+                    <a href="#none" class="content"><img src="../assets/images/logo/podcast_available_on.png" alt="podcast_available_on logo"></a>
+                  </li>
+                  <li>
+                    <a href="#none" class="content"><img src="../assets/images/logo/apple_podcasts.png" alt="apple podcasts logo"></a>
+                  </li>
+                  <li>
+                    <a href="#none" class="content"><img src="../assets/images/logo/sound_cloud.png" alt="sound_cloud logo"></a>
+                  </li>
+                  <li>
+                    <a href="#none" class="content"><img src="../assets/images/logo/google_podcast.png" alt="google_podcast logo"></a>
+                  </li>
+                  <li>
+                    <a href="#none" class="content"><img src="../assets/images/logo/spotify.png" alt="spotify logo"></a>
+                  </li>
+                </ul>
+              </div>
+            </div>
+        </section>
+
           <div class="top_sec_wrap con-m sec_fir">
             <div class="top_img_wrap reverse">
               <img src="../assets/images/contents/main_con_1.png" alt="podcast img">
