--- a/dev/page_include/header.html
+++ b/dev/page_include/header.html
@@ -1,5 +1,5 @@
 <!-- header -->
-<header class="con_pd">
+<header>
     <h1>
       <a href="Home.html"><img src="../assets/images/logo/logo.svg" alt="finsweet"></a>
     </h1>
@@ -7,7 +7,7 @@
     <!-- gnb -->
     <nav>
       <div class="gnb">
-        
+
         <!-- mo_hamburger -->
         <div class="mo_hamburger">
           <div class="line1"></div>
@@ -20,20 +20,20 @@
 
         <div class="sub_menu">
           <ul class="menu">
-            <li><a href="Podcasts.html">Podcasts</a></li>
-            <li><a href="Host.html">Host</a></li>
-            <li><a href="About.html">About</a></li>
-            <li><a href="Blog.html">Blog</a></li>
-            <li><a href="Contact.html">Contact</a></li>
+            <li><a href="podcast.html">Podcasts</a></li>
+            <li><a href="host.html">Host</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="blog.html">Blog</a></li>
+            <li><a href="contact.html">Contact</a></li>
           </ul>
 
           <ul class="sns">
-            <li><a href="#none" class="facebook_b"></a></li>
-            <li><a href="#none" class="linkedIn_b"></a></li>
-            <li><a href="#none" class="instagram_b"></a></li>
+            <li><a href="https://ko-kr.facebook.com/facebook/" class="facebook_b"></a></li>
+            <li><a href="https://www.figma.com/file/q4jTVMDIpHbB7AXcZb3fSj/Client-First-Template-8---Podcast-(Community)?node-id=292%3A972" class="linkedIn_b"></a></li>
+            <li><a href="https://www.instagram.com/" class="instagram_b"></a></li>
           </ul>
         </div>
-        
+
       </div>
     </nav>
     <!-- //gnb -->
