--- a/pages/promotion.html
+++ b/pages/promotion.html
@@ -15,8 +15,9 @@
 
 <!-- wrapper -->
 <div id="wrapper">
+  <div class="container">
 <!-- header -->
-<header class="con_pd">
+<header>
     <h1>
       <a href="Home.html"><img src="../assets/images/logo/logo.svg" alt="finsweet"></a>
     </h1>
@@ -24,7 +25,7 @@
     <!-- gnb -->
     <nav>
       <div class="gnb">
-        
+
         <!-- mo_hamburger -->
         <div class="mo_hamburger">
           <div class="line1"></div>
@@ -37,20 +38,20 @@
 
         <div class="sub_menu">
           <ul class="menu">
-            <li><a href="Podcasts.html">Podcasts</a></li>
-            <li><a href="Host.html">Host</a></li>
-            <li><a href="About.html">About</a></li>
-            <li><a href="Blog.html">Blog</a></li>
-            <li><a href="Contact.html">Contact</a></li>
+            <li><a href="podcast.html">Podcasts</a></li>
+            <li><a href="host.html">Host</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="blog.html">Blog</a></li>
+            <li><a href="contact.html">Contact</a></li>
           </ul>
 
           <ul class="sns">
-            <li><a href="#none" class="facebook_b"></a></li>
-            <li><a href="#none" class="linkedIn_b"></a></li>
-            <li><a href="#none" class="instagram_b"></a></li>
+            <li><a href="https://ko-kr.facebook.com/facebook/" class="facebook_b"></a></li>
+            <li><a href="https://www.figma.com/file/q4jTVMDIpHbB7AXcZb3fSj/Client-First-Template-8---Podcast-(Community)?node-id=292%3A972" class="linkedIn_b"></a></li>
+            <li><a href="https://www.instagram.com/" class="instagram_b"></a></li>
           </ul>
         </div>
-        
+
       </div>
     </nav>
     <!-- //gnb -->
@@ -73,9 +74,6 @@
 
 </script>
 
-  <!-- container -->
-  <div class="container">
-      <!-- contents -->
       <div id="contents" class="page_promotion">
 
         <div class="promotion">
@@ -607,21 +605,19 @@
       </div>
       <!-- //container -->
 
-  </div>
-
 <!-- footer -->
 <footer>
   <!-- footer_con -->
   <div class="footer_con">
     <div class="logo_wrap">
-      <a href="Home.html"><img src="../assets/images/logo/logo_w.svg" alt="finsweet"></a>
+      <a href="home.html"><img src="../assets/images/logo/logo_w.svg" alt="finsweet"></a>
     </div>
 
     <div class="pages">
       <h4>Pages</h4>
       <ul>
         <li><a href="home.html">Home</a></li>
-        <li><a href="podcasts.html">Podcasts</a></li>
+        <li><a href="podcast.html">Podcasts</a></li>
         <li><a href="host.html">Host</a></li>
         <li><a href="blog.html">Blog</a></li>
       </ul>
@@ -630,22 +626,31 @@
     <div class="reach_us">
       <h4>Reach Us</h4>
       <ul>
-        <li><a href="#none">Contact</a></li>
-        <li><a href="#none">About</a></li>
+        <li><a href="contact.html">Contact</a></li>
+        <li><a href="about.html">About</a></li>
       </ul>
     </div>
 
     <div class="subscribe">
       <h4>Subscribe</h4>
       <ul>
-        <li class="logo_apple"><a href="#none"><img src="../assets/images/logo/apple_podcasts_w.png" alt="apple podcasts"></a></li>
-        <li class="logo_sound_cloud"><a href="#none"><img src="../assets/images/logo/sound_cloud_w.png" alt="sound cloud"></a></li>
-        <li class="google_logo"><a href="#none"><img src="../assets/images/logo/google_podcast_w.png" alt="googl _podcast"></a></li>
-        <li class="spotify_logo"><a href="#none"><img src="../assets/images/logo/spotify_w.png" alt="spotify"></a></li>
+        <li class="logo_apple"><a href="https://www.apple.com/apple-podcasts/"><img src="../assets/images/logo/apple_podcasts_w.png" alt="apple podcasts"></a></li>
+        <li class="logo_sound_cloud"><a href="https://soundcloud.com/n1acqe23gscl"><img src="../assets/images/logo/sound_cloud_w.png" alt="sound cloud"></a></li>
+        <li class="google_logo"><a href="https://podcasts.google.com/"><img src="../assets/images/logo/google_podcast_w.png" alt="googl _podcast"></a></li>
+        <li class="spotify_logo"><a href="https://www.spotify.com/kr-ko/"><img src="../assets/images/logo/spotify_w.png" alt="spotify"></a></li>
       </ul>
     </div>
     <!-- dark_mode -->
-    <input class="dark_mode" type="checkbox">
+    <!-- <input class="dark_mode" type="checkbox"> -->
+
+    <div class="button-cover">
+      <div class="turn">
+        <input type="checkbox" class="switch_chk dark_mode">
+        <div class="sun"></div>
+        <div class="moon"></div>
+      </div>
+    </div>
+
     <!-- // dark_mode -->
   </div>
 
@@ -655,6 +660,8 @@
 
 </footer>
 <!-- //footer -->
+  </div>
+
 </div>
 <!-- //wrapper -->
 
