ul > li 수정 및 기타수정

--- a/pages/about.html
+++ b/pages/about.html
@@ -24,7 +24,7 @@
 
         <!-- banner_top -->
         <div class="banner_top_01">
-          <div class="banner_top_img"></div>
+          <div class="banner_top_img"><span class="blind">About Finsweet Podcast background</span></div>
           <div class="banner_top_tit_wrap">
             <div class="banner_top_tit">
               <div class="typ_sec typ_sec_02">
@@ -85,7 +85,7 @@
         <div class="our_team">
           <div class="our_t_tit_wrap">
             <h2 class="heading_2">A few words about our team</h2>
-            <div class="our_t_img_wrap"></div>
+            <img src="../assets/images/contents/about_banner.png" alt="our team">
             <div class="our_t_txt">
               <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem
                 eget condimentum enim libero ultricies amet odio fringilla. Ut nibh
