--- a/dev/page_include/footer_sponsors.html
+++ b/dev/page_include/footer_sponsors.html
@@ -3,11 +3,13 @@
   <div class="footer_sponsors">
     <h3 class="heading_2">Our Sponsors</h3>
     <div class="logoipsum">
-        <img src="../assets/images/logo/logoipsum_1.png" alt="logoipsum">
-        <img src="../assets/images/logo/logoipsum_2.png" alt="logoipsum">
-        <img src="../assets/images/logo/logoipsum_3.png" alt="logoipsum">
-        <img src="../assets/images/logo/logoipsum_4.png" alt="logoipsum">
-        <img src="../assets/images/logo/logoipsum_5.png" alt="logoipsum">
+      <ul>
+        <li><img src="../assets/images/logo/logoipsum_1.png" alt="logoipsum"></li>
+        <li><img src="../assets/images/logo/logoipsum_2.png" alt="logoipsum"></li>
+        <li><img src="../assets/images/logo/logoipsum_3.png" alt="logoipsum"></li>
+        <li><img src="../assets/images/logo/logoipsum_4.png" alt="logoipsum"></li>
+        <li><img src="../assets/images/logo/logoipsum_5.png" alt="logoipsum"></li>
+      </ul>
     </div>
   </div>
 </div>
