--- a/pages/blog.html
+++ b/pages/blog.html
@@ -49,63 +49,75 @@
           <div class="typ_list_wrap">
             <ul>
               <li>
-                <div class="img_wrap">
-                  <img src="../assets/images/contents/common_con_4.png" alt="blog post image" class="typ_list_img">
-                </div>
-                <div class="typ_sub_wrap">
-                  <h3 class="heading_3">How to build a world-class business brand</h3>
-                  <p class="heading_5 sub_txt">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor.</p>
-                  <a href="#none" class="btn_typ_02 btn_listen">Read Now</a>
-                </div>
-              </li>
-              <li>
-                <div class="img_wrap">
-                  <img src="../assets/images/contents/common_con_2.png" alt="blog post image" class="typ_list_img">
-                </div>
-                <div class="typ_sub_wrap">
-                  <h3 class="heading_3">Getting the first 100 customers for your business</h3>
-                  <p class="heading_5 sub_txt">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor.</p>
-                  <a href="#none" class="btn_typ_02 btn_listen">Read Now</a>
+                <div class="blog_item">
+                  <div class="img_wrap">
+                    <img src="../assets/images/contents/common_con_4.png" alt="blog post image" class="typ_list_img">
+                  </div>
+                  <div class="typ_sub_wrap">
+                    <h3 class="heading_3">How to build a world-class business brand</h3>
+                    <p class="heading_5 sub_txt">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor.</p>
+                    <a href="#none" class="btn_typ_02 btn_listen">Read Now</a>
+                  </div>
                 </div>
               </li>
               <li>
-                <div class="img_wrap">
-                  <img src="../assets/images/contents/common_con_5.png" alt="blog post image" class="typ_list_img">
-                </div>
-                <div class="typ_sub_wrap">
-                  <h3 class="heading_3">Should I raise money for my startup, or not?</h3>
-                  <p class="heading_5 sub_txt">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor</p>
-                  <a href="#none" class="btn_typ_02 btn_listen">Read Now</a>
-                </div>
-              </li>
-              <li>
-                <div class="img_wrap">
-                  <img src="../assets/images/contents/common_con_6.png" alt="blog post image" class="typ_list_img">
-                </div>
-                <div class="typ_sub_wrap">
-                  <h3 class="heading_3">How to build a world-class business brand</h3>
-                  <p class="heading_5 sub_txt">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor</p>
-                  <a href="#none" class="btn_typ_02 btn_listen">Read Now</a>
+                <div class="blog_item">
+                  <div class="img_wrap">
+                    <img src="../assets/images/contents/common_con_2.png" alt="blog post image" class="typ_list_img">
+                  </div>
+                  <div class="typ_sub_wrap">
+                    <h3 class="heading_3">Getting the first 100 customers for your business</h3>
+                    <p class="heading_5 sub_txt">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor.</p>
+                    <a href="#none" class="btn_typ_02 btn_listen">Read Now</a>
+                  </div>
                 </div>
               </li>
               <li>
-                <div class="img_wrap">
-                  <img src="../assets/images/contents/common_con_7.png" alt="blog post image" class="typ_list_img">
-                </div>
-                <div class="typ_sub_wrap">
-                <h3 class="heading_3">Getting the first 100 customers for your business</h3>
-                <p class="heading_5 sub_txt">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor</p>
-                <a href="#none" class="btn_typ_02 btn_listen">Read Now</a>
+                <div class="blog_item">
+                  <div class="img_wrap">
+                    <img src="../assets/images/contents/common_con_5.png" alt="blog post image" class="typ_list_img">
+                  </div>
+                  <div class="typ_sub_wrap">
+                    <h3 class="heading_3">Should I raise money for my startup, or not?</h3>
+                    <p class="heading_5 sub_txt">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor</p>
+                    <a href="#none" class="btn_typ_02 btn_listen">Read Now</a>
+                  </div>
                 </div>
               </li>
               <li>
-                <div class="img_wrap">
-                  <img src="../assets/images/contents/common_con_8.png" alt="blog post image" class="typ_list_img">
+                <div class="blog_item">
+                  <div class="img_wrap">
+                    <img src="../assets/images/contents/common_con_6.png" alt="blog post image" class="typ_list_img">
+                  </div>
+                  <div class="typ_sub_wrap">
+                    <h3 class="heading_3">How to build a world-class business brand</h3>
+                    <p class="heading_5 sub_txt">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor</p>
+                    <a href="#none" class="btn_typ_02 btn_listen">Read Now</a>
+                  </div>
                 </div>
-                <div class="typ_sub_wrap">
-                  <h3 class="heading_3">Should I raise money for my startup, or not?</h3>
-                  <p class="heading_5 sub_txt">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor</p>
-                  <a href="#none" class="btn_typ_02 btn_listen">Read Now</a>
+              </li>
+              <li>
+                <div class="blog_item">
+                  <div class="img_wrap">
+                    <img src="../assets/images/contents/common_con_7.png" alt="blog post image" class="typ_list_img">
+                  </div>
+                  <div class="typ_sub_wrap">
+                    <h3 class="heading_3">Getting the first 100 customers for your business</h3>
+                    <p class="heading_5 sub_txt">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor</p>
+                    <a href="#none" class="btn_typ_02 btn_listen">Read Now</a>
+                  </div>
+                </div>
+              </li>
+              <li>
+                <div class="blog_item">
+                  <div class="img_wrap">
+                    <img src="../assets/images/contents/common_con_8.png" alt="blog post image" class="typ_list_img">
+                  </div>
+                  <div class="typ_sub_wrap">
+                    <h3 class="heading_3">Should I raise money for my startup, or not?</h3>
+                    <p class="heading_5 sub_txt">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor</p>
+                    <a href="#none" class="btn_typ_02 btn_listen">Read Now</a>
+                  </div>
                 </div>
               </li>
             </ul>
